--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Zhaoxuan Ge"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Keep my head down and code"
   location         : "Nan Jing"
   employer         : "NJUST"
   uri              : # URL
